Update supported font format specifiers

While we do support variations, our format specifier support was not
updated yet. Move all of that to FontCustomPlatformData and add a WPT
test to cover common supported format specifiers.

Test: external/wpt/css/css-fonts/format-specifiers-variations.html
Bug: 804466
Change-Id: I06d7af65cf74e13cec49dc279efb8ffc2b56dda9
Reviewed-on: https://chromium-review.googlesource.com/926007
Reviewed-by: Koji Ishii <kojii@chromium.org>
Commit-Queue: Dominik Röttsches <drott@chromium.org>
Cr-Commit-Position: refs/heads/master@{#537799}
Former-commit-id: cd434aed12c4d1948016a1b128c054f134bd397f