third_party/WebKit/Source/platform/fonts/WebFontDecoder.h
@@ -49,7 +49,6 @@ class WebFontDecoder final {
   sk_sp<SkTypeface> Decode(SharedBuffer*);
   size_t DecodedSize() const { return decoded_size_; }
 
-  static bool SupportsFormat(const String&);
   String GetErrorString() const { return ots_error_string_; }
 
  private:
